--- a/site-2026-main/package.json
+++ b/site-2026-main/package.json
@@ -1,56 +1,30 @@
 {
-  "private": true,
+  "name": "site-2026-main",
+  "version": "1.0.0",
+  "description": "Official Website for EOH 2024.",
+  "main": "middleware.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "export": "next export",
-    "postinstall": "prisma generate"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@clerk/clerk-js": "^4.70.0",
-    "@clerk/nextjs": "^4.29.7",
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
-    "@mui/icons-material": "^5.5.1",
-    "@mui/material": "^5.5.3",
-    "@prisma/client": "5.9.1",
-    "@prisma/extension-accelerate": "0.6.3",
-    "@sendgrid/mail": "^8.1.1",
-    "@tailwindcss/line-clamp": "^0.3.1",
-    "clerk": "^0.8.3",
-    "csvtojson": "^2.0.10",
-    "dayjs": "^1.11.10",
-    "fuse.js": "^6.6.2",
-    "install": "^0.13.0",
-    "lucide-react": "^0.476.0",
-    "material-ui-search-bar": "^1.0.0",
-    "next": "13.2.4",
-    "next-query-params": "^5.0.0",
-    "prisma": "5.9.1",
-    "prop-types": "^15.7.2",
-    "react": "^18.2.0",
-    "react-alice-carousel": "^2.7.0",
-    "react-chrono": "^1.12.1",
-    "react-collapsible": "2.10.0",
-    "react-datetime-picker": "^5.6.0",
-    "react-dom": "^18.2.0",
-    "react-faq-component": "^1.3.1",
-    "react-icons": "^4.6.0",
-    "react-responsive-carousel": "^3.2.23",
-    "react-responsive-masonry": "^2.2.0",
-    "react-zoom-pan-pinch": "^3.4.3",
-    "sharp": "^0.33.2",
-    "swr": "^2.2.5",
-    "underscore": "^1.13.2",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@iconify/react": "^6.0.0",
+    "@mui/icons-material": "^7.2.0",
+    "@mui/material": "^7.2.0",
+    "@tailwindcss/postcss": "^4.1.11",
+    "dayjs": "^1.11.13",
+    "fuse.js": "^7.1.0",
+    "next": "^15.3.4",
+    "next-query-params": "^5.1.0",
+    "postcss": "^8.5.6",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
+    "swr": "^2.3.4",
+    "tailwindcss": "^4.1.11",
     "use-query-params": "^2.2.1"
-  },
-  "devDependencies": {
-    "@iconify/react": "^4.1.1",
-    "autoprefixer": "^10.2.6",
-    "postcss": "^8.3.5",
-    "tailwindcss": "^2.2.4"
   }
 }
