--- a/site-2026-main/package.json
+++ b/site-2026-main/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.31.8",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "@prisma/client": "5.9.1",
